--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
   <div class="wrapper">
+    <h1 style="text-align: center;">use arrows</h1>
     <div class="area">
       <div class="square"></div>
     </div>
